Easy F5 testability of loose+gts ember app

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -59,7 +59,7 @@
     {
       // For this to work, make sure you're runninc `tsc --build --watch` at the root, AND
       // `yarn bundle:watch` from within vscode directory.
-      "name": "Debug Extension (TS Plugin Only)",
+      "name": "Debug Extension (TS Plugin, .gts)",
       "type": "extensionHost",
       "request": "launch",
       // "preLaunchTask": "npm: build",
@@ -71,8 +71,27 @@
       ],
       "args": [
         "--extensionDevelopmentPath=${workspaceFolder}/packages/vscode",
-        "--disable-extensions", // uncomment to activate your local extensions
+        "--disable-extensions", // comment to activate your local extensions
         "${workspaceFolder}/test-packages/ts-plugin-test-app"
+      ]
+    },
+    {
+      // For this to work, make sure you're runninc `tsc --build --watch` at the root, AND
+      // `yarn bundle:watch` from within vscode directory.
+      "name": "Debug Extension (TS Plugin, ember-app-loose-and-gts)",
+      "type": "extensionHost",
+      "request": "launch",
+      // "preLaunchTask": "npm: build",
+      "autoAttachChildProcesses": true,
+      "runtimeExecutable": "${execPath}",
+      "outFiles": [
+        "${workspaceFolder}/**/*.js",
+        "!**/node_modules/**"
+      ],
+      "args": [
+        "--extensionDevelopmentPath=${workspaceFolder}/packages/vscode",
+        "--disable-extensions", // comment to activate your local extensions
+        "${workspaceFolder}/packages/vscode/__fixtures__/ember-app-loose-and-gts/"
       ]
     },
     {
