--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -64,6 +64,7 @@
     "execa": "^4.0.1",
     "glint-monorepo-test-utils": "^1.4.0",
     "strip-ansi": "^6.0.0",
+		"@typescript/server-harness": "latest",
     "vitest": "~1.0.0"
   },
   "publishConfig": {
