get one new-style definition test running

--- a/packages/vscode/__fixtures__/template-imports-app-ts-plugin/tsconfig.json
+++ b/packages/vscode/__fixtures__/template-imports-app-ts-plugin/tsconfig.json
@@ -5,9 +5,6 @@
     "enableTsPlugin": true
   },
   "compilerOptions": {
-    "baseUrl": ".",
-
-    // TODO: work out the interplay between this and typescriptServerPlugins in extension's package.json
-    "plugins": [{ "name": "@glint/typescript-plugin" }]
+    "baseUrl": "."
   }
 }
