get ts hbs test passing

--- a/packages/vscode/__fixtures__/template-imports-app-ts-plugin/tsconfig.json
+++ b/packages/vscode/__fixtures__/template-imports-app-ts-plugin/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../../../../tsconfig.compileroptions.json",
   "glint": {
-    "environment": ["ember-loose", "ember-template-imports"],
-    "enableTsPlugin": true
+    "environment": ["ember-loose", "ember-template-imports"]
   },
   "compilerOptions": {
     "baseUrl": "."
