--- a/packages/vscode/__fixtures__/ember-app-loose-and-gts/tsconfig.json
+++ b/packages/vscode/__fixtures__/ember-app-loose-and-gts/tsconfig.json
@@ -7,7 +7,6 @@
     "skipLibCheck": true
   },
   "glint": {
-    "environment": ["ember-loose", "ember-template-imports"],
-    "enableTsPlugin": true
+    "environment": ["ember-loose", "ember-template-imports"]
   }
 }
