--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "nohoist:comment": "When running extension host in test-packages/ts-plugin-test-app, we need 1. to be able to use workspace TypeScript, and 2. to use a TS Plugin specified as an npm dependency, both which require typescript and the plugin to be present within the same folder's `node_modules` directory.",
     "nohoist": [
       "ts-plugin-test-app/typescript",
-      "ts-plugin-test-app/@glint/typescript-plugin"
+      "ts-plugin-test-app/@glint/tsserver-plugin"
     ]
   },
   "scripts": {
