--- a/packages/tsserver-plugin/package.json
+++ b/packages/tsserver-plugin/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "jiti": "~2.4.2",
     "@glint/core": "^1.4.0",
+    "@volar/language-core": "2.4.12",
     "@volar/typescript": "2.4.12"
   },
   "publishConfig": {
