--- a/packages/tsserver-plugin/package.json
+++ b/packages/tsserver-plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@glint/typescript-plugin",
+  "name": "@glint/tsserver-plugin",
   "version": "1.4.0",
   "type": "commonjs",
   "repository": "typed-ember/glint",
@@ -23,6 +23,7 @@
   "dependencies": {
     "jiti": "~2.4.2",
     "@glint/core": "^1.4.0",
+    "@volar/language-core": "2.4.12",
     "@volar/typescript": "2.4.12"
   },
   "publishConfig": {
