--- a/packages/vscode/__fixtures__/template-imports-app-ts-plugin/tsconfig.json
+++ b/packages/vscode/__fixtures__/template-imports-app-ts-plugin/tsconfig.json
@@ -1,13 +1,9 @@
 {
   "extends": "../../../../tsconfig.compileroptions.json",
   "glint": {
-    "environment": ["ember-loose", "ember-template-imports"],
-    "enableTsPlugin": true
+    "environment": ["ember-loose", "ember-template-imports"]
   },
   "compilerOptions": {
-    "baseUrl": ".",
-
-    // TODO: work out the interplay between this and typescriptServerPlugins in extension's package.json
-    "plugins": [{ "name": "@glint/typescript-plugin" }]
+    "baseUrl": "."
   }
 }
