--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,13 +24,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: yarn
-
-      - run: yarn install --frozen-lockfile
-      - run: yarn lint
+          cache: 'pnpm'
+      - run: pnpm install
+      - run: pnpm lint
 
 
   # tracking for re-enablement here: https://github.com/typed-ember/glint/issues/728
@@ -42,29 +41,32 @@ jobs:
   #     - uses: actions/setup-node@v4
   #       with:
   #         node-version: 18
-  #         cache: yarn
+  #         cache: pnpm
 
-  #     - run: yarn install --frozen-lockfile
-  #     - run: "yarn build"
-  #     - run: "yarn workspaces run test:typecheck"
-  #     - run: "yarn workspaces run test:tsc"
+  #     - uses: pnpm/action-setup@v2
+  #       with:
+  #         version: 10.6.2
+  #         run_install: true
+  #     - run: "pnpm build"
+  #     - run: "pnpm --filter '*' run test:typecheck"
+  #     - run: "pnpm --filter '*' run test:tsc"
 
   test:
     name: Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: yarn
-      - run: yarn install --frozen-lockfile
+          cache: 'pnpm'
+      - run: pnpm install
       - name: Build
-        run: yarn build
+        run: pnpm build
       - name: Run Tests
         uses: coactions/setup-xvfb@v1
         with:
-          run: yarn test
+          run: pnpm test
 
   # The Windows runner can be super flaky both with Yarn installs and
   # when launching browser tests, so we allow for retries in those steps.
@@ -84,21 +86,23 @@ jobs:
   #       with:
   #         max_attempts: 2
   #         timeout_minutes: 10
-  #         command: yarn install --frozen-lockfile
+  #         command: pnpm install
   #     - name: Build
-  #       run: yarn build
+  #       run: pnpm build
   #     - name: Test @glint/core
   #       uses: nick-fields/retry@v2
   #       with:
   #         max_attempts: 2
   #         timeout_minutes: 20
-  #         command: yarn workspace @glint/core test
+  #         command: pnpm --filter @glint/core test
   #     - name: Test glint-vscode
   #       uses: nick-fields/retry@v2
   #       with:
   #         max_attempts: 2
   #         timeout_minutes: 10
-  #         command: yarn workspace glint-vscode test
+  #         command: pnpm --filter glint-vscode test
+  #     - name: Test @glint/scripts
+  #       run: pnpm --filter @glint/scripts test
 
   # tracking for re-enablement here: https://github.com/typed-ember/glint/issues/728
   # test-floating-deps:
@@ -109,14 +113,17 @@ jobs:
   #     - uses: actions/setup-node@v4
   #       with:
   #         node-version: 18
-  #         cache: yarn
-  #     - run: yarn install --no-lockfile
+  #         cache: 'pnpm'
+  #     - uses: pnpm/action-setup@v2
+  #       with:
+  #         version: 10.6.2
+  #         run_install: true
   #     - name: Build
-  #       run: yarn build
+  #       run: pnpm build
   #     - name: Run Tests
   #       uses: coactions/setup-xvfb@v1
   #       with:
-  #         run: yarn test
+  #         run: pnpm test
 
   # tracking for re-enablement here: https://github.com/typed-ember/glint/issues/728
   # test-ts-nightly:
@@ -127,12 +134,15 @@ jobs:
   #     - uses: actions/setup-node@v4
   #       with:
   #         node-version: 18
-  #         cache: yarn
-  #     - run: yarn install --frozen-lockfile
-  #     - run: yarn add --dev -W typescript@next
+  #         cache: 'pnpm'
+  #     - uses: pnpm/action-setup@v2
+  #       with:
+  #         version: 10.6.2
+  #         run_install: true
+  #     - run: pnpm add -D typescript@next
   #     - name: Build
-  #       run: yarn build
+  #       run: pnpm build
   #     - name: Run Tests
   #       uses: coactions/setup-xvfb@v1
   #       with:
-  #         run: yarn test
+  #         run: pnpm test
