--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,7 +28,7 @@
     "test:tsc": "echo 'no standalone typecheck within this project'",
     "test:watch": "vitest watch",
     "build": "tsc --build",
-    "prepack": "yarn build"
+    "prepack": "pnpm build"
   },
   "peerDependencies": {
     "typescript": ">=5.6.0"
@@ -48,22 +48,23 @@
     "silent-error": "^1.1.1",
     "uuid": "^8.3.2",
     "volar-service-typescript": "volar-2.4",
-    "vscode-languageserver-textdocument": "^1.0.5",
     "vscode-languageserver-protocol": "^3.17.5",
+    "vscode-languageserver-textdocument": "^1.0.5",
     "vscode-uri": "^3.0.8",
     "yargs": "^17.5.1"
   },
   "devDependencies": {
-    "@typescript/server-harness": "latest",
+    "@glimmer/component": "^1.1.2",
     "@types/common-tags": "^1.8.0",
     "@types/node": "^18.11.5",
     "@types/semver": "^7.3.13",
     "@types/uuid": "^8.3.4",
     "@types/yargs": "^17.0.10",
+    "@typescript/server-harness": "latest",
     "@vitest/ui": "~1.0.0",
     "common-tags": "^1.8.0",
     "execa": "^4.0.1",
-    "glint-monorepo-test-utils": "^1.4.0",
+    "glint-monorepo-test-utils": "workspace:*",
     "strip-ansi": "^6.0.0",
     "vitest": "~1.4.0"
   },
