--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -21,7 +21,7 @@
     "test:typecheck": "glint --project __tests__/type-tests && vitest run",
     "test:watch": "vitest watch",
     "build": "tsc --build",
-    "prepack": "yarn build"
+    "prepack": "pnpm build"
   },
   "files": [
     "README.md",
@@ -43,6 +43,8 @@
     }
   },
   "devDependencies": {
+    "@glint/core": "workspace:*",
+    "@glint/template": "workspace:*",
     "@glimmer/component": "^1.1.2",
     "ember-modifier": "^3.2.7 || ^4.0.0",
     "expect-type": "^0.15.0",
