--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -23,7 +23,7 @@
     "test:typecheck": "echo 'no standalone typecheck within this project'",
     "test:tsc": "echo 'no standalone typecheck within this project'",
     "build": "tsc --build",
-    "prepack": "yarn build"
+    "prepack": "pnpm build"
   },
   "dependencies": {
     "glob": "^7.2.0",
