--- a/packages/vscode/__fixtures__/ember-app/tsconfig.json
+++ b/packages/vscode/__fixtures__/ember-app/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "strict": true,
+    "strict": false,
     "target": "es2019",
     "module": "es2015",
     "moduleResolution": "node",
