Drop support for @types/ember* only use native/built-in types

--- a/tsconfig.compileroptions.json
+++ b/tsconfig.compileroptions.json
@@ -14,7 +14,7 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "types": ["@types/node"],
+    "types": ["ember-source/types", "@types/node"],
 
     // new
     "allowSyntheticDefaultImports": true
