--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
+    "ember-source": "~6.2.0",
     "eslint": "^8.27.0",
     "prettier": "^3.3.2",
     "release-it": "^15.5.0",
