--- a/.npmrc
+++ b/.npmrc
@@ -5,3 +5,23 @@ ignore-scripts=false
 # Libraries should never have this enabled,
 # else we can break consumers
 auto-install-peers=false
+
+
+## This also means we do not want to hoist them to the root
+## As this would both expose them to all other packages AND
+## results in them using symlinks instead of hardlinks
+##
+hoist-workspace-packages=false
+
+## If a dependency is not declared, we do not want to accidentally
+## resolve it from the workspace root. This is a common source of
+## bugs in monorepos.
+##
+resolve-peers-from-workspace-root=false
+
+## We use so many similarly grouped peers, we want to make the
+## peer-groups easier to distinguish.
+## This forces a shorter sha for all groups (vs the default of 1000)
+##
+peers-suffix-max-length=40
+virtual-store-dir-max-length=40
