--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "devDependencies:notes": {
     "typescript": "bumped version because volar caused error TS2694, TS1383"
   },
+  "pnpm": {
+    "onlyBuiltDependencies": ["@vscode/vsce-sign", "core-js", "esbuild", "keytar"]
+  },
   "devDependencies": {
     "@release-it-plugins/lerna-changelog": "^5.0.0",
     "@release-it-plugins/workspaces": "^3.2.0",
