--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,8 @@
 packages:
-- "packages/*"
-- "test-packages/*"
+  - packages/*
+  - test-packages/*
+onlyBuiltDependencies:
+  - '@vscode/vsce-sign'
+  - core-js
+  - esbuild
+  - keytar
