--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/babel__traverse": "^7.18.2",
     "@types/node": "^20.10.6",
     "@types/yargs": "^17.0.10",
+    "@glint/tsserver-plugin": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "@types/rsvp": "^4.0.9",
