--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -33,6 +33,7 @@
   },
   "peerDependencies": {
     "@glint/environment-ember-loose": "workspace:*",
+    "@glint/core": "workspace:*",
     "@glint/template": "workspace:*"
   },
   "devDependencies": {
