--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,4 @@
-# This repo makes heavy use of pre-scripts 
-ignore-scripts=false
+ignore-scripts=true
 
 
 # Libraries should never have this enabled,
