--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -24,8 +24,7 @@
     "Linters"
   ],
   "scripts": {
-    "pretest": "pnpm build",
-    "test": "pnpm test-language-server && pnpm test-ts-plugin",
+    "test": "pnpm build && pnpm test-language-server && pnpm test-ts-plugin",
     "test-language-server": "node lib/__tests__/support/launch-from-cli.mjs language-server",
     "test-ts-plugin": "node lib/__tests__/support/launch-from-cli.mjs ts-plugin",
     "test:typecheck": "echo 'no standalone typecheck within this project'",
