--- a/package.json
+++ b/package.json
@@ -35,18 +35,16 @@
     "typescript": "bumped version because volar caused error TS2694, TS1383"
   },
   "pnpm": {
-    "onlyBuiltDependencies": [
-      "@vscode/vsce-sign",
-      "core-js",
-      "esbuild",
-      "keytar"
-    ]
+    "peerDependencyRules": {
+      "ignoreMissing": ["webpack", "ember-auto-import", "@babel/core", "rsvp"]
+    }
   },
   "devDependencies": {
     "@release-it-plugins/lerna-changelog": "^5.0.0",
     "@release-it-plugins/workspaces": "^3.2.0",
     "@types/babel__traverse": "^7.18.2",
     "@types/node": "^20.10.6",
+    "@glimmer/component": "^2.0.0",
     "@types/yargs": "^17.0.10",
     "@glint/tsserver-plugin": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
