--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -72,7 +72,8 @@
     "execa": "^4.0.1",
     "glint-monorepo-test-utils": "workspace:*",
     "strip-ansi": "^6.0.0",
-    "vitest": "~3.0.9"
+    "vitest": "~3.0.9",
+    "typescript": ">=5.6.0"
   },
   "publishConfig": {
     "access": "public"
