--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -49,7 +49,8 @@
     "@glint/template": "workspace:*",
     "ember-modifier": "^3.2.7 || ^4.0.0",
     "expect-type": "^0.15.0",
-    "vitest": "~3.0.9"
+    "vitest": "~3.0.9",
+    "typescript": ">=5.6.0"
   },
   "publishConfig": {
     "access": "public"
