--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -39,7 +39,8 @@
   "devDependencies": {
     "@glint/core": "workspace:*",
     "@types/node": "^18.11.5",
-    "vitest": "~3.0.9"
+    "vitest": "~3.0.9",
+    "typescript": ">=5.6.0"
   },
   "publishConfig": {
     "access": "public"
