Somehow esmoduleinterop got removed

--- a/tsconfig.compileroptions.json
+++ b/tsconfig.compileroptions.json
@@ -20,6 +20,7 @@
 
     // new
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
 
     "types": ["ember-source/types", "@types/node"]
   }
