--- a/packages/environment-ember-loose/tsconfig.json
+++ b/packages/environment-ember-loose/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "../../tsconfig.compileroptions.json",
   "include": ["registry", "-private"],
+  "compileroptions": {
+    "types": ["@types/node"]
+  },
   "references": [{ "path": "../template" }, { "path": "../core" }]
 }
