--- a/packages/environment-ember-template-imports/tsconfig.json
+++ b/packages/environment-ember-template-imports/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "../../tsconfig.compileroptions.json",
   "include": ["-private"],
+  "compilerOptions": {
+    "types": ["@types/node"]
+  },
   "references": [
     { "path": "../environment-ember-loose" },
     { "path": "../core" },
