--- a/tsconfig.compileroptions.json
+++ b/tsconfig.compileroptions.json
@@ -22,6 +22,6 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
 
-    "types": ["ember-source/types", "@types/node"]
+    "types": []
   }
 }
