--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -30,8 +30,8 @@
   ],
   "peerDependencies": {
     "@glimmer/component": ">=1.1.2",
-    "@glint/template": "workspace:*",
     "@glint/core": "workspace:*",
+    "@glint/template": "workspace:*",
     "ember-cli-htmlbars": "^6.0.1",
     "ember-modifier": "^3.2.7 || ^4.0.0"
   },
@@ -47,10 +47,11 @@
     "@glimmer/component": "^1.1.2",
     "@glint/core": "workspace:*",
     "@glint/template": "workspace:*",
+    "@types/node": "^22.13.11",
     "ember-modifier": "^3.2.7 || ^4.0.0",
     "expect-type": "^0.15.0",
-    "vitest": "~3.0.9",
-    "typescript": ">=5.6.0"
+    "typescript": ">=5.6.0",
+    "vitest": "~3.0.9"
   },
   "publishConfig": {
     "access": "public"
