--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -32,15 +32,15 @@
     "content-tag": "^3.1.2"
   },
   "peerDependencies": {
-    "@glint/environment-ember-loose": "workspace:*",
     "@glint/core": "workspace:*",
+    "@glint/environment-ember-loose": "workspace:*",
     "@glint/template": "workspace:*"
   },
   "devDependencies": {
     "@glint/core": "workspace:*",
-    "@types/node": "^18.11.5",
-    "vitest": "~3.0.9",
-    "typescript": ">=5.6.0"
+    "@types/node": "^18.19.81",
+    "typescript": ">=5.6.0",
+    "vitest": "~3.0.9"
   },
   "publishConfig": {
     "access": "public"
