--- a/packages/tsserver-plugin/package.json
+++ b/packages/tsserver-plugin/package.json
@@ -21,13 +21,16 @@
     "prepack": "pnpm build"
   },
   "dependencies": {
-    "jiti": "~2.4.2",
     "@glint/core": "workspace:*",
     "@volar/language-core": "2.4.12",
     "@volar/typescript": "2.4.12",
+    "jiti": "~2.4.2",
     "typescript": ">=5.6.0"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.11"
   }
 }
