Not sure if progress or not

--- a/.npmrc
+++ b/.npmrc
@@ -14,7 +14,7 @@ verify-deps-before-run=true
 ## resolve it from the workspace root. This is a common source of
 ## bugs in monorepos.
 ##
-resolve-peers-from-workspace-root=false
+resolve-peers-from-workspace-root=true
 
 ## We use so many similarly grouped peers, we want to make the
 ## peer-groups easier to distinguish.
@@ -23,11 +23,9 @@ resolve-peers-from-workspace-root=false
 peers-suffix-max-length=40
 virtual-store-dir-max-length=40
 
-## Our Workspace Packages are "injected" so prevent
-## devDependencies from being exposed and to allow
-## for us to test optional peerDependencies.
-##
-inject-workspace-packages=true
+# We don't want to inject *all* dependencies.
+# only the ones that are peers. 
+inject-workspace-packages=false
 
 
 ## This also means we do not want to hoist them to the root
