--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@release-it-plugins/workspaces": "^3.2.0",
     "@glimmer/component": "^2.0.0",
     "@glint/tsserver-plugin": "workspace:*",
+    "glint-monorepo-test-utils": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "eslint": "^8.27.0",
