--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -38,7 +38,9 @@
   },
   "devDependencies": {
     "@glint/core": "workspace:*",
+    "@types/common-tags": "^1.8.0",
     "@types/node": "^18.19.81",
+    "common-tags": "^1.8.0",
     "typescript": ">=5.6.0",
     "vitest": "~3.0.9"
   },
